[metadata]
name = HuClip The Text
version = 0.0.2
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Compares questions with images on Hungarian language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/huclip-the-text
project_urls =
    Bug Tracker = https://github.com/ficstamas/huclip-the-text/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ftfy>=6.1.1
    numpy>=1.22.3
    torch>=1.11.0
    transformers>=4.17.0
    huspacy==0.4.2
    beautifulsoup4>=4.10.0
    clip @ git+https://github.com/openai/CLIP.git@40f5484c1c74edd83cb9cf687c6ab92b28d8b656
    paddle @ git+https://github.com/ficstamas/paddle.git@v0.0.3